--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="https://imgur.com/qtnkg9X.jpg" width="200px">
       <h1>Ben's Blog</h1>
       <ul>
-        <li><a href="#">About Me</a></li>
+        <li><a href="./about/about.html">About Me</a></li>
         <li><a href="#">Best Poems</a></li>
         <li><a href="#">Worst Poems</a></li>
       </ul>
